--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,34 @@ jobs:
         working-directory: terraform/eks
         run: terraform init
 
+      - name: Check and clean nodegroups before Terraform Apply
+        run: |
+          CLUSTER_NAME=hello-eks
+          REGION=${{ env.AWS_REGION }}
+
+          echo "Checking if EKS cluster '$CLUSTER_NAME' exists..."
+          if aws eks describe-cluster --name "$CLUSTER_NAME" --region "$REGION" >/dev/null 2>&1; then
+            echo "Cluster exists. Listing nodegroups..."
+            NODEGROUPS=$(aws eks list-nodegroups --cluster-name "$CLUSTER_NAME" --region "$REGION" --output text || echo "")
+
+            if [ -z "$NODEGROUPS" ]; then
+              echo "No nodegroups to delete."
+            else
+              for NG in $NODEGROUPS; do
+                echo "Deleting nodegroup: $NG"
+                aws eks delete-nodegroup --cluster-name "$CLUSTER_NAME" --nodegroup-name "$NG" --region "$REGION" || true
+
+                echo "Waiting for nodegroup $NG to be deleted..."
+                while aws eks describe-nodegroup --cluster-name "$CLUSTER_NAME" --nodegroup-name "$NG" --region "$REGION" >/dev/null 2>&1; do
+                  sleep 10
+                done
+              done
+            fi
+          else
+            echo "Cluster does not exist yet. Skipping nodegroup cleanup."
+          fi
+        continue-on-error: true
+
       - name: Terraform Apply
         working-directory: terraform/eks
         run: terraform apply -auto-approve
@@ -53,7 +81,9 @@ jobs:
 
       - name: Install Helmfile
         run: |
-          curl -L https://github.com/helmfile/helmfile/releases/download/${HELMFILE_VERSION}/helmfile_${HELMFILE_VERSION}_linux_amd64.tar.gz | tar xz
+          VERSION_CLEAN=${HELMFILE_VERSION#v} 
+          curl -L "https://github.com/helmfile/helmfile/releases/download/${HELMFILE_VERSION}/helmfile_${VERSION_CLEAN}_linux_amd64.tar.gz" -o helmfile.tar.gz
+          tar -xzf helmfile.tar.gz
           sudo mv helmfile /usr/local/bin/
 
       - name: Install SOPS
