--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,23 +42,29 @@ jobs:
         working-directory: terraform/eks
         run: terraform init
      
-      - name: Import OIDC provider if already exists
+      - name: Importar OIDC si ya existe
         working-directory: terraform/eks
         run: |
           CLUSTER_NAME="hello-eks"
+          REGION="us-east-1"
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          OIDC_ID=$(aws eks describe-cluster --name $CLUSTER_NAME --query "cluster.identity.oidc.issuer" --output text | awk -F'/' '{print $NF}')
-          OIDC_ARN="arn:aws:iam::${ACCOUNT_ID}:oidc-provider/oidc.eks.${AWS_REGION}.amazonaws.com/id/${OIDC_ID}"
+          OIDC_ID=$(aws eks describe-cluster --name $CLUSTER_NAME --region $REGION --query "cluster.identity.oidc.issuer" --output text | awk -F'/' '{print $NF}')
+          OIDC_ARN="arn:aws:iam::${ACCOUNT_ID}:oidc-provider/oidc.eks.${REGION}.amazonaws.com/id/${OIDC_ID}"
 
-          echo "Checking if OIDC provider $OIDC_ARN exists..."
+          echo "Verificando si Terraform ya maneja el recurso OIDC..."
 
-          if aws iam get-open-id-connect-provider --open-id-connect-provider-arn "$OIDC_ARN" > /dev/null 2>&1; then
-          echo "OIDC provider exists, importing into Terraform..."
-          terraform state list | grep "aws_iam_openid_connect_provider.oidc_provider" > /dev/null 2>&1 \
-          || terraform import "module.eks.aws_iam_openid_connect_provider.oidc_provider[0]" "$OIDC_ARN"
+          if terraform state list | grep -q "module.eks.aws_iam_openid_connect_provider.oidc_provider"; then
+          echo "OIDC ya está en el estado de Terraform. Nada que hacer."
           else
-          echo "OIDC provider does not exist. Terraform will create it."
+          echo "Verificando si el OIDC ya existe en AWS..."
+          if aws iam get-open-id-connect-provider --open-id-connect-provider-arn "$OIDC_ARN" > /dev/null 2>&1; then
+          echo "Importando OIDC a Terraform..."
+          terraform import "module.eks.aws_iam_openid_connect_provider.oidc_provider[0]" "$OIDC_ARN"
+          else
+          echo "OIDC no existe en AWS. Terraform lo creará."
+            fi
           fi
+
 
       - name: Terraform Apply
         working-directory: terraform/eks
