Update deploy.yml shell corregido

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,8 @@ jobs:
           terraform plan -out=tfplan || echo "No changes to apply"
 
       - name: Ensure OIDC is imported
-        run: ./scripts/pre-import-oidc.sh
+        run: bash terraform/eks/scripts/pre-import-oidc.sh
+
 
          
       - name: Terraform Apply Plan
