Update deploy.yml sin comillas

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
         run:  |
           bash terraform/eks/scripts/pre-import-oidc.sh
             env:
-            CLUSTER_NAME="hello-eks"
+            CLUSTER_NAME= hello-eks
 
 
          
