--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,12 +69,16 @@ jobs:
         with:
           version: ${{ env.HELM_VERSION }}
 
+      - name: Install Helm Diff plugin
+        run: helm plugin install https://github.com/databus23/helm-diff
+
       - name: Install Helmfile
         run: |
           VERSION_CLEAN=${HELMFILE_VERSION#v}
           curl -L "https://github.com/helmfile/helmfile/releases/download/${HELMFILE_VERSION}/helmfile_${VERSION_CLEAN}_linux_amd64.tar.gz" -o helmfile.tar.gz
           tar -xzf helmfile.tar.gz
           sudo mv helmfile /usr/local/bin/
+
 
       - name: Install SOPS
         run: |
