--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,6 +96,11 @@ jobs:
           export SOPS_AGE_KEY_FILE=$AGE_KEY_FILE
           sops -d secrets/${{ env.ENVIRONMENT }}-secrets.yaml > secrets.dec.yaml
 
+
+      - name: Configure kubeconfig
+        run: aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
+
+
       - name: Deploy with Helmfile
         run: |
           export SOPS_AGE_KEY_FILE=$AGE_KEY_FILE
