--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ env:
   HELMFILE_VERSION: v0.155.0
   SOPS_VERSION: 3.8.1
   AGE_KEY_FILE: .sops.age.key
+  CLUSTER_NAME: hello-eks
 
 jobs:
   deploy:
