Update deploy.yml validar cluster

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,40 @@ jobs:
           terraform plan -out=tfplan || echo "No changes to apply"
 
      
+      - name: Remove existing IAM OIDC Provider if it exists
+        run: |
+          set -euo pipefail
+
+          echo "Verificando existencia del OIDC Provider del clúster '$CLUSTER_NAME' en '$AWS_REGION'..."
+
+          OIDC_URL=$(aws eks describe-cluster \
+          --region "$AWS_REGION" \
+          --name "$CLUSTER_NAME" \
+          --query "cluster.identity.oidc.issuer" \
+          --output text || echo "")
+
+          if [[ -z "$OIDC_URL" ]]; then
+          echo "❌ No se pudo obtener el OIDC URL del clúster (posiblemente aún no creado). Saliendo sin acción."
+          exit 0
+          fi
+
+          OIDC_SUFFIX=$(echo "$OIDC_URL" | sed 's|https://||')
+    
+          OIDC_ARN=$(aws iam list-open-id-connect-providers \
+          --query "OpenIDConnectProviderList[].Arn" \
+          --output text | grep "$OIDC_SUFFIX" || true)
+
+          if [[ -n "$OIDC_ARN" ]]; then
+          echo "⚠️ OIDC Provider existente encontrado: $OIDC_ARN"
+          echo "🔄 Eliminando para evitar conflictos en Terraform apply..."
+          aws iam delete-open-id-connect-provider --open-id-connect-provider-arn "$OIDC_ARN"
+          echo "✅ OIDC Provider eliminado correctamente."
+          else
+          echo "✅ No hay OIDC Provider duplicado. Continuando..."
+          fi
+            env:
+            CLUSTER_NAME: hello-eks
+            AWS_REGION: us-east-1
 
 
          
