--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,6 +138,15 @@ jobs:
         run: aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
 
 
+      - name: Configurar acceso a EKS
+        run: |
+          aws eks update-kubeconfig --region "$AWS_REGION" --name "$CLUSTER_NAME"
+        env:
+          AWS_REGION: us-east-1
+          CLUSTER_NAME: hello-eks
+    
+
+
       - name: Deploy with Helmfile
         run: |
           export SOPS_AGE_KEY_FILE=$AGE_KEY_FILE
