--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,6 @@ jobs:
         working-directory: terraform/eks
         run: terraform init
 
-     
-
       - name: Terraform Plan
         id: tfplan
         working-directory: terraform/eks
@@ -52,46 +50,38 @@ jobs:
         run: |
           terraform plan -out=tfplan || echo "No changes to apply"
 
-     
       - name: Remove existing IAM OIDC Provider if it exists
         run: |
           set -euo pipefail
-
           echo "Verificando existencia del OIDC Provider del clúster '$CLUSTER_NAME' en '$AWS_REGION'..."
-
           OIDC_URL=$(aws eks describe-cluster \
-          --region "$AWS_REGION" \
-          --name "$CLUSTER_NAME" \
-          --query "cluster.identity.oidc.issuer" \
-          --output text || echo "")
-
+            --region "$AWS_REGION" \
+            --name "$CLUSTER_NAME" \
+            --query "cluster.identity.oidc.issuer" \
+            --output text || echo "")
           if [[ -z "$OIDC_URL" ]]; then
-          echo "❌ No se pudo obtener el OIDC URL del clúster (posiblemente aún no creado). Saliendo sin acción."
-          exit 0
+            echo "❌ No se pudo obtener el OIDC URL del clúster (posiblemente aún no creado). Saliendo sin acción."
+            exit 0
           fi
-
           OIDC_SUFFIX=$(echo "$OIDC_URL" | sed 's|https://||')
-
           EXISTING_OIDC_ARNS=$(aws iam list-open-id-connect-providers \
-          --query "OpenIDConnectProviderList[].Arn" \
-          --output text | grep "$OIDC_SUFFIX" || true)
-
+            --query "OpenIDConnectProviderList[].Arn" \
+            --output text | grep "$OIDC_SUFFIX" || true)
           if [[ -n "$EXISTING_OIDC_ARNS" ]]; then
-          echo "⚠️ Se encontraron OIDC Providers existentes:"
-          echo "$EXISTING_OIDC_ARNS"
-          for arn in $EXISTING_OIDC_ARNS; do
-          echo "🔄 Eliminando $arn ..."
-          aws iam delete-open-id-connect-provider --open-id-connect-provider-arn "$arn" || echo "⚠️ No se pudo eliminar $arn (posiblemente ya fue eliminado)"
-          done
-          echo "✅ Todos los OIDC Providers eliminados (si existían)."
+            echo "⚠️ Se encontraron OIDC Providers existentes:"
+            echo "$EXISTING_OIDC_ARNS"
+            for arn in $EXISTING_OIDC_ARNS; do
+              echo "🔄 Eliminando $arn ..."
+              aws iam delete-open-id-connect-provider --open-id-connect-provider-arn "$arn" || echo "⚠️ No se pudo eliminar $arn (posiblemente ya fue eliminado)"
+            done
+            echo "✅ Todos los OIDC Providers eliminados (si existían)."
           else
-          echo "✅ No hay OIDC Provider duplicado. Continuando..."
+            echo "✅ No hay OIDC Provider duplicado. Continuando..."
           fi
         env:
-            CLUSTER_NAME: hello-eks
-            AWS_REGION: us-east-1
+          CLUSTER_NAME: hello-eks
+          AWS_REGION: us-east-1
 
-         
       - name: Terraform Apply Plan
         working-directory: terraform/eks
         run: |
@@ -116,7 +106,6 @@ jobs:
           tar -xzf helmfile.tar.gz
           sudo mv helmfile /usr/local/bin/
 
-
       - name: Install SOPS
         run: |
           curl -L https://github.com/getsops/sops/releases/download/v${SOPS_VERSION}/sops-v${SOPS_VERSION}.linux.amd64 -o sops
@@ -133,19 +122,27 @@ jobs:
           export SOPS_AGE_KEY_FILE=$AGE_KEY_FILE
           sops -d secrets/${{ env.ENVIRONMENT }}-secrets.yaml > secrets.dec.yaml
 
-
-      - name: Configure kubeconfig
-        run: aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
-
-
       - name: Configurar acceso a EKS
-        run: |
-          aws eks update-kubeconfig --region "$AWS_REGION" --name "$CLUSTER_NAME"
+        run: aws eks update-kubeconfig --region "$AWS_REGION" --name "$CLUSTER_NAME"
         env:
           AWS_REGION: us-east-1
           CLUSTER_NAME: hello-eks
-    
 
+      - name: Esperar que el cluster EKS esté disponible
+        run: |
+          echo "⏳ Esperando a que el clúster esté listo..."
+          for i in {1..30}; do
+            if kubectl get nodes &>/dev/null; then
+              echo "✅ Clúster EKS disponible."
+              break
+            fi
+            echo "Esperando 10 segundos... intento $i/30"
+            sleep 10
+          done
+          if ! kubectl get nodes &>/dev/null; then
+            echo "❌ Error: el clúster no está accesible tras esperar."
+            exit 1
+          fi
 
       - name: Deploy with Helmfile
         run: |
