--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -161,7 +161,7 @@ jobs:
           echo "⏳ Esperando a que el clúster esté listo...."
           for i in {1..2}; do
             if kubectl get nodes &>/dev/null; then
-              echo "✅ Clúster EKS disponible."
+              echo "✅ Clúster EKS ya disponible."
               break
             fi
             echo "Esperando 10 segundos... intento $i/2"
